@@ -1,4 +1,5 @@
 1.9.2
+* Client: the handler to chain.TrustedTxChecker also checks match on tx's WTxID now.
 * Tools/bdb: new switch "-fixlen" to set up the uncompressed size of each block inside blockchain.new
 * Client: BlocksDB index file contains now also the uncompressed size of each block
 * Client/WebUI/Wallet: Export settings stores entire local storage
